--- a/Natours/starter/sass/components/_form.scss
+++ b/Natours/starter/sass/components/_form.scss
@@ -80,10 +80,7 @@
       display: block;
       border-radius: 50%;
       background-color: $color-primary;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+      @include absCenter;
       opacity: 0;
       transition: opacity .2s;
     }
