--- a/Natours/starter/sass/pages/_home.scss
+++ b/Natours/starter/sass/pages/_home.scss
@@ -23,7 +23,7 @@
 
 .section-tours {
   background-color: $color-grey-light-1;
-  padding: 25rem 0 15rem;
+  padding: 25rem 0 15rem 0;
   margin-top: -10rem;
 }
 
