--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -12,10 +12,12 @@
     top: 0;
     left: 0;
     width: 100%;
-    backface-visibility: hidden;
     border-radius: 3px;
     overflow: hidden;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+
+    --webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
 
     &--front {
       background-color: $color-white;
