--- a/Natours/starter/sass/components/_story.scss
+++ b/Natours/starter/sass/components/_story.scss
@@ -24,14 +24,20 @@
     width: 15rem;
     height: 15rem;
     float: left;
-
-    --weblit-shape-outside: circle(50% at 50% 50%);
-    shape-outside: circle(50% at 50% 50%);
-
-    --webkit-clip-path:  circle(50% at 50% 50%);
-    clip-path:  circle(50% at 50% 50%);
+    overflow: hidden;
+    border-radius: 50%;
 
     transform: translateX(-3rem) skewX(12deg);
+
+    @supports (clip-path: circle(0 0)) or (--webkit-clip-path: circle(0 0)) {
+      --weblit-shape-outside: circle(50% at 50% 50%);
+      shape-outside: circle(50% at 50% 50%);
+
+      --webkit-clip-path:  circle(50% at 50% 50%);
+      clip-path:  circle(50% at 50% 50%);
+
+      border-radius: none;
+    }
 
     @include respond(phone) {
       transform: translateX(-3rem) skewX(0);
