--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -164,7 +164,9 @@
 
 
   // TAB-PORT VIEW
-  @include respond(tab-port) {
+  //@include respond(tab-port) {
+  @media only screen and (max-width: 56.25em),
+  only screen and (hover: none) {
     // FUNCTIONALITY
     height: auto;
     border-radius: 3px;
