--- a/Trillo/starter/css/style.css
+++ b/Trillo/starter/css/style.css
@@ -128,6 +128,16 @@ body {
     border-radius: 50%;
     margin-right: 1rem; }
 
+.side-nav__icon {
+  height: 1.75rem;
+  width: 1.75rem; }
+
+.legal {
+  font-size: 1.2rem;
+  color: var(--color-grey-light-4);
+  text-align: center;
+  padding: 2.5rem; }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
@@ -139,7 +149,7 @@ body {
   font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
-  border-bottom: var(--color-grey-light-2);
+  border-bottom: 1px solid var(--color-grey-light-2);
   display: flex;
   justify-content: space-between;
   align-items: center; }
@@ -149,8 +159,12 @@ body {
 
 .sidebar {
   background-color: var(--color-grey-dark-1);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   flex: 0 0 18%; }
 
 .hotel-view {
   background-color: #fff;
+  height: 80rem;
   flex: 1; }
