--- a/Trillo/starter/sass/_components.scss
+++ b/Trillo/starter/sass/_components.scss
@@ -118,3 +118,33 @@
     margin-right: 1rem;
   }
 }
+
+///////////////////////////////////////////////////
+// SIDE-NAV
+
+.side-nav {
+
+  &__item {
+
+  }
+
+  &__link {
+
+  }
+
+  &__icon {
+    height: 1.75rem;
+    width: 1.75rem;
+  }
+}
+
+///////////////////////////////////////////////////
+// LEGAL-TEXT
+
+.legal {
+  font-size: 1.2rem;
+  color: var(--color-grey-light-4);
+  text-align: center;
+  padding: 2.5rem;
+}
+
