--- a/Trillo/starter/sass/_layout.scss
+++ b/Trillo/starter/sass/_layout.scss
@@ -11,7 +11,7 @@
   font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
-  border-bottom: var(--color-grey-light-2);
+  border-bottom: 1px solid var(--color-grey-light-2);
 
   display: flex;
   justify-content: space-between;
@@ -25,11 +25,16 @@
 .sidebar {
   background-color: var(--color-grey-dark-1);
 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
   flex: 0 0 18%;
 }
 
 .hotel-view {
   background-color: #fff;
+  height: 80rem;
 
   flex: 1;
 }
