--- a/Trillo/starter/sass/_components.scss
+++ b/Trillo/starter/sass/_components.scss
@@ -127,11 +127,24 @@
   list-style: none;
   margin-top: 3.5rem;
 
+  @media only screen and (max-width: $bp-medium){
+    display: flex;
+    margin: 0;
+  }
+
   &__item {
     position: relative;
 
     &:not(:last-child) {
       margin-bottom: .5rem;
+
+      @media only screen and (max-width: $bp-medium){
+        margin-bottom: 0;
+      }
+    }
+
+    @media only screen and (max-width: $bp-medium){
+      flex: 1;
     }
   }
 
@@ -171,6 +184,11 @@
 
     display: flex;
     align-items: center;
+
+    @media only screen and (max-width: $bp-medium){
+      justify-content: center;
+      padding: 2rem;
+    }
   }
 
   &__icon {
@@ -189,6 +207,10 @@
   color: var(--color-grey-light-4);
   text-align: center;
   padding: 2.5rem;
+
+  @media only screen and (max-width: $bp-medium){
+    display: none;
+  }
 }
 
 ///////////////////////////////////////////////////
@@ -378,7 +400,7 @@
   }
 
   &__friends {
-
+    display: flex;
   }
 
   &__photo {
@@ -389,7 +411,7 @@
     box-sizing: content-box;
 
     &:not(:last-child) {
-      margin-right: -1.5rem;
+      margin-right: -2rem;
     }
   }
 }
@@ -404,6 +426,11 @@
   margin-bottom: 3.5rem;
   position: relative;
   overflow: hidden;
+
+  @media only screen and (max-width: $bp-medium){
+    padding: 2rem;
+    margin-bottom: 3rem;
+  }
 
   &__text {
     margin-bottom: 2rem;
@@ -464,6 +491,10 @@
 .cta {
   padding: 3.5rem 0;
   text-align: center;
+
+  @media only screen and (max-width: $bp-medium){
+    padding: 2.5rem 0;
+  }
 
   &__book-now {
     font-size: 2rem;
