--- a/Trillo/starter/sass/_base.scss
+++ b/Trillo/starter/sass/_base.scss
@@ -39,6 +39,8 @@ Grey dark 3: #999
 $bp-largest: 75em;
 $bp-large: 68.75em;
 $bp-medium: 56.25em;
+$bp-small: 37.5em;
+$bp-smallest: 31.25em;
 
 * {
   margin: 0;
