feat: finish trillo project

--- a/Trillo/starter/sass/_components.scss
+++ b/Trillo/starter/sass/_components.scss
@@ -406,17 +406,21 @@
     margin-right: .7rem;
 
     // Older browsers
-    //background-image: url("../img/chevron-thin-right.svg");
-    //background-size: cover;
+    background-image: url("../img/chevron-thin-right.svg");
+    background-size: cover;
 
     // Newer browsers - masks
-    background-color: var(--color-primary);
+    @supports (-webkit-mask-image: url('../img/user.jpg')) or (mask-image: url('../img/user.jpg')) {
+      background-color: var(--color-primary);
 
-    -webkit-mask-image: url("../img/chevron-thin-right.svg");
-    -webkit-mask-size: cover;
+      -webkit-mask-image: url("../img/chevron-thin-right.svg");
+      -webkit-mask-size: cover;
 
-    mask-image: url("../img/chevron-thin-right.svg");
-    mask-size: cover;
+      mask-image: url("../img/chevron-thin-right.svg");
+      mask-size: cover;
+
+      background-image: none;
+    }
   }
 }
 
